# slopbox

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  quickstart.md  runbook.md
.claude/agent-memory/red-team-security/: MEMORY.md
.claude/agents/: blue-team-defense.md  red-team-security.md
.claude/projects/-home-mr-idiot-claude-cludbox/memory/: MEMORY.md
.github/workflows/: ci.yml  deploy-backend.yml
backend/: Cargo.toml  Dockerfile  fly.toml
backend/.claude/agent-memory/red-team-security/: MEMORY.md
backend/crates/cb-api/: Cargo.toml  README.md
backend/crates/cb-api/src/: auth.rs  config.rs  dto.rs  error.rs  gateway_proxy.rs  main.rs  monitor.rs  openclaw_config.rs  proxy.rs  state.rs
backend/crates/cb-api/src/routes/: admin.rs  agents.rs  channels.rs  config.rs  mod.rs  plans.rs  usage.rs  users.rs  vps.rs
backend/crates/cb-db/: Cargo.toml  README.md
backend/crates/cb-db/migrations/: 001_updated_at_trigger.sql  002_plans.sql  003_vps_configs.sql  004_plan_vps_configs.sql  005_users.sql  006_vpses.sql  007_agents.sql  008_accounts.sql  008_auth.sql  009_sessions.sql  010_plan_overage_rates.sql  010_verification_token.sql  010_verification_tokens.sql  011_vps_usage_periods.sql  012_overage_budgets.sql  013_agent_channels.sql  013_user_role_status.sql  014_seed.sql  014_seed_sprites_demo.sql  015_vps_config_improvements.sql  016_auth_camelcase.sql
backend/crates/cb-db/src/: lib.rs  models.rs
backend/crates/cb-infra/: Cargo.toml  README.md
backend/crates/cb-infra/src/: fly.rs  hetzner.rs  lib.rs  sprites.rs  types.rs
backend/crates/fly-api/: Cargo.toml  README.md
backend/crates/fly-api/src/: lib.rs  types.rs
backend/crates/sprites-api/: Cargo.toml  README.md
backend/crates/sprites-api/src/: lib.rs  types.rs
backend/security/: RED_TEAM.md
backend/temp/claudescripts/: list_server_types.sh
frontend/: .env.local.example  next.config.ts  package.json  pnpm-lock.yaml
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx
frontend/src/app/admin/users/: page.tsx
frontend/src/app/admin/vpses/: page.tsx
frontend/src/app/api/token/: route.ts
frontend/src/app/dashboard/: page.tsx
frontend/src/app/dashboard/agents/[id]/: page.tsx
frontend/src/app/dashboard/agents/[id]/chat/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/pending/: page.tsx
frontend/src/lib/: api-client.ts  auth.ts
openclaw-notes/: GATEWAY.md  PRD.md  README.md
security/: RED_TEAM.md
setup/plans/: starter.sql
