[package]
name = "cb-db"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
rand = "0.9"
